--- a/index.html
+++ b/index.html
@@ -25,15 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <link href="assets/css/main.css" rel="stylesheet">  
 </head>
 
 <body class="index-page">
@@ -65,13 +57,13 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Brandon Johnson</h2>
-            <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <h2>Godwin Eliaschukwudi</h2>
+            <p>I'm <span class="typed" data-typed-items="Software Developer, SEO Specialist, Designer">Laravel Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/Oluwadamil72390"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.instagram.com/eliasc.dev/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/godwin-eliaschukwudi-66bb18288/"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/Eliasc98"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
