--- a/index.html
+++ b/index.html
@@ -77,7 +77,28 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>
+          Passionate Software Developer
+          with over four years of experience
+          in creating dynamic, user-friendly
+          web and mobile applications using
+          React and React Native. Skilled in
+          backend API development with
+          PHP and Laravel. In addition to
+          engineering expertise, I bring
+          strong capabilities in SEO strategy
+          and execution, with proven
+          success optimizing digital
+          performance for brands.
+          Also proficient in graphic design,
+          crafting compelling visuals that
+          enhance user engagement and
+          brand identity. I thrive in
+          collaborative environments and
+          am dedicated to driving
+          innovation and excellence in
+          every project.
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -89,30 +110,32 @@
           <div class="col-lg-8 content">
             <h2>Software Developer (React, React Native, PHP, Laravel) / SEO Specialist</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Dynamic and results-driven Senior Software Developer with over
+four years of experience specializing in React, React Native, PHP,
+and Laravel. Proven track record in delivering high-quality.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>09 September 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 902 458 5559</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lagos, Nigeria</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bsc F/Accounting</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>oluwadamilare.c99@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Eager to leverage proven expertise
+in developing high-impact web and mobile applications
+alongside enhancing SEO strategies and creative design to drive
+innovation and excellence.
             </p>
           </div>
         </div>
