--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/headshot.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Software Developer (React, React Native, PHP, Laravel) / SEO Specialist</h2>
