--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>I bring a blend of technical expertise and problem-solving skills to every project. From crafting clean, responsive user interfaces to building powerful backend logic, I enjoy working across the full stack to deliver fast, functional, and user-focused web experiences. </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -220,7 +220,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p> showcasing my experience, education, and technical background. With a strong foundation in web and mobile development, I’m constantly growing and adapting to new technologies to solve real-world problems. Feel free to download my resume or reach out for opportunities to collaborate.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -228,15 +228,15 @@ innovation and excellence.
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
+              <h4>Godwin Eliaschukwudi</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>(123) 902-458-5559</li>
+                <li>oluwadamilare.c99@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
