--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -232,9 +228,12 @@ innovation and excellence.
 
             <div class="resume-item pb-0">
               <h4>Godwin Eliaschukwudi</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Dynamic and results-driven Senior Software Developer with over
+                four years of experience specializing in React, React Native, PHP,
+                and Laravel. Additionally, skilled as an SEO Specialist and Graphic
+                Designer, adept at optimizing digital presence and crafting
+                engaging visual experiences</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
                 <li>(123) 902-458-5559</li>
                 <li>oluwadamilare.c99@gmail.com</li>
               </ul>
@@ -242,16 +241,16 @@ innovation and excellence.
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Diploma In Desktop Publishing and Networking</h4>
+              <h5>2016 - 2017</h5>
+              <p><em>Catholic Institute Of Information and Tech.</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Certified of Completion PHP and Larvel Development</h4>
+              <h5>2020-2021</h5>
+              <p><em>Udemy Online Course</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div><!-- Edn Resume Item -->
 
@@ -260,26 +259,42 @@ innovation and excellence.
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>FULLSTACK DEVELOPER</h4>
+              <h5>2024 - Present</h5>
+              <p><em>
+                10505 Town and Country Way,                
+                Houston, TX 77024, USA</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Backend operations specialist at BayouTexas, overseeing
+                  website and backend reengineering efforts.</li>
+                <li>Leveraged technical expertise to analyze, evaluate, and
+                  redesign BayouTexas's website and backend infrastructure,
+                  aiming to improve performance, scalability, and security.</li>
+                <li>Implemented modern development practices and
+                  technologies to streamline backend operations at
+                  BayouTexas, enhancing efficiency and user experience.</li>
+                <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
+              <h4>Laravel Developer / Designer</h4>
+              <h5>August 2023 – November 2024</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Full-stack developer at Chronicles Software Development,
+                  building dynamic web applications and APIs using React,
+                  React Native, and Laravel.</li>
+                <li>Contributed to various projects, including educational
+                  websites and currently developing a parental control mobile
+                  application with React Native.</li>
+                <li>Designed and implemented robust backend APIs with
+                  Laravel, ensuring smooth data flow and communication
+                  between front-end and back-end systems.</li>
+                <li>Developed user-friendly and responsive web interfaces using
+                  React, delivering exceptional user experiences across
+                  platforms.
+                  </li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -412,15 +427,17 @@ innovation and excellence.
     </section><!-- /Portfolio Section -->
 
     <!-- Services Section -->
+     <!--
     <section id="services" class="services section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      Section Title -->
+      <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-      </div><!-- End Section Title -->
+      </div> -->
+      <!-- End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="row gy-4">
 
@@ -437,7 +454,7 @@ innovation and excellence.
               </a>
               <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
@@ -452,7 +469,7 @@ innovation and excellence.
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
@@ -467,7 +484,7 @@ innovation and excellence.
               </a>
               <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
@@ -483,7 +500,7 @@ innovation and excellence.
               <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
               <a href="#" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
@@ -499,7 +516,7 @@ innovation and excellence.
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
               <a href="#" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
@@ -515,22 +532,22 @@ innovation and excellence.
               <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
               <a href="#" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Services Section -->
+    </section> -->
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section">
+   
+    <!-- <section id="testimonials" class="testimonials section">
 
-      <!-- Section Title -->
+     
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -574,7 +591,7 @@ innovation and excellence.
                   </div>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -598,7 +615,7 @@ innovation and excellence.
                   </div>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -622,7 +639,7 @@ innovation and excellence.
                   </div>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -646,7 +663,7 @@ innovation and excellence.
                   </div>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -654,16 +671,16 @@ innovation and excellence.
 
       </div>
 
-    </section><!-- /Testimonials Section -->
+    </section> -->
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <!-- <section id="contact" class="contact section">
 
-      <!-- Section Title -->
+      
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade" data-aos-delay="100">
 
@@ -676,7 +693,7 @@ innovation and excellence.
                 <h3>Address</h3>
                 <p>A108 Adam Street, New York, NY 535022</p>
               </div>
-            </div><!-- End Info Item -->
+            </div>
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
@@ -684,7 +701,7 @@ innovation and excellence.
                 <h3>Call Us</h3>
                 <p>+1 5589 55488 55</p>
               </div>
-            </div><!-- End Info Item -->
+            </div>
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope flex-shrink-0"></i>
@@ -692,7 +709,7 @@ innovation and excellence.
                 <h3>Email Us</h3>
                 <p>info@example.com</p>
               </div>
-            </div><!-- End Info Item -->
+            </div> 
 
           </div>
 
@@ -726,25 +743,24 @@ innovation and excellence.
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section> -->
 
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Godwin Eliaschukwudi</h3>
+      <p>Full-Stack Developer:: React JS || ReactNative || Vue || PHP || Laravel framework || CI/CD</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
+        <a href=""><i class="bi bi-github"></i></a>
         <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
