--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Godwin Eliaschukwudi</h2>
-            <p>I'm  a <span class="typed" data-typed-items="Software Developer, SEO Specialist, Designer">Laravel Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm  a <span class="typed" data-typed-items="Software Developer, SEO Specialist, Designer, React Developer, React Native Developer">Laravel Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://x.com/Oluwadamil72390"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.instagram.com/eliasc.dev/"><i class="bi bi-instagram"></i></a>
