--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Godwin Eliaschukwudi</h2>
-            <p>I'm  a <span class="typed" data-typed-items="Software Developer, SEO Specialist, Designer, React Developer, React Native Developer">Laravel Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm  a <span class="typed" data-typed-items="Software Developer, SEO Specialist, Designer, React Developer, React Native Developer, Laravel Developer">Laravel Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://x.com/Oluwadamil72390"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.instagram.com/eliasc.dev/"><i class="bi bi-instagram"></i></a>
@@ -312,7 +312,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, Node.js, and Django. React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -329,7 +329,7 @@ innovation and excellence.
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/sb1 (1).png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Success Box v2.0</h4>
                 <p>An Educational App for Students and Pupils</p>
@@ -343,7 +343,7 @@ innovation and excellence.
               <div class="portfolio-info">
                 <h4>SuccessBox Exam Page</h4>
                 <p>Educational App</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/sb2 (1).png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="https://play.google.com/store/apps/details?id=sbox.chronicles.v2&hl=en" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
