--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ innovation and excellence.
     </section> -->
 
     <!-- Contact Section -->
-    <!-- <section id="contact" class="contact section">
+    <section id="contact" class="contact section">
 
       
       <div class="container section-title" data-aos="fade-up">
@@ -706,8 +706,8 @@ innovation and excellence.
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <h3>Email Me</h3>
+                <p>oluwadamilare.c99@gmail.com</p>
               </div>
             </div> 
 
@@ -749,7 +749,7 @@ innovation and excellence.
 
       </div>
 
-    </section> -->
+    </section>
 
   </main>
 
