--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ innovation and excellence.
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>FULLSTACK DEVELOPER</h4>
+              <h4>Fullstack Developer At Bayou Movers</h4>
               <h5>2024 - Present</h5>
               <p><em>
                 10505 Town and Country Way,                
@@ -278,9 +278,9 @@ innovation and excellence.
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Laravel Developer / Designer</h4>
+              <h4>Laravel Developer / Designer At Chronicles SDC</h4>
               <h5>August 2023 – November 2024</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>19, Joel Ogunnaike GRA Ikeja, Lagos.</em></p>
               <ul>
                 <li>Full-stack developer at Chronicles Software Development,
                   building dynamic web applications and APIs using React,
