--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@ innovation and excellence.
                 Designer, adept at optimizing digital presence and crafting
                 engaging visual experiences</em></p>
               <ul>
-                <li>(123) 902-458-5559</li>
+                <li>(+234) 902-458-5559</li>
                 <li>oluwadamilare.c99@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Diploma In Desktop Publishing and Networking</h4>
+              <h4>Diploma In Desktop Publishing and Networking / Frontend Development</h4>
               <h5>2016 - 2017</h5>
               <p><em>Catholic Institute Of Information and Tech.</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Certified of Completion PHP and Larvel Development</h4>
+              <h4>Certified of Completion PHP and Laravel Development</h4>
               <h5>2020-2021</h5>
               <p><em>Udemy Online Course</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
