--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ innovation and excellence.
               <h4>Diploma In Desktop Publishing and Networking / Frontend Development</h4>
               <h5>2016 - 2017</h5>
               <p><em>Catholic Institute Of Information and Tech.</em></p>
-              <p>This diploma program focused on the skills needed for desktop publishing, networking, and frontend development, preparing students for careers in technology and design.</p>
+              <p>This program focuses on creating visually appealing content and understanding the technical aspects of networking and frontend technologies. Graduates are prepared for careers in various fields, including graphic design, web design/front-end development, and IT support, making them versatile professionals in the digital landscape.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
