--- a/index.html
+++ b/index.html
@@ -295,6 +295,10 @@ innovation and excellence.
                   React, delivering exceptional user experiences across
                   platforms.
                   </li>
+                  <li>Collaborated with cross-functional teams to gather requirements,
+                    troubleshoot issues, and deliver high-quality software
+                    solutions.</li>
+                    <li>Click for <a href="https://drive.google.com/drive/folders/1dvzTErE4v8QJ08HPfrgk6G1N0Z1g17AD" target="_top" style="font-weight: 700; font-style: italic;">Designer Portfolio.</a></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
