--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ innovation and excellence.
                   <li>Collaborated with cross-functional teams to gather requirements,
                     troubleshoot issues, and deliver high-quality software
                     solutions.</li>
-                    <li>Click for <a href="https://drive.google.com/drive/folders/1dvzTErE4v8QJ08HPfrgk6G1N0Z1g17AD" target="_top" style="font-weight: 700; font-style: italic;">Designer Portfolio.</a></li>
+                    <li>Click for <a href="https://drive.google.com/drive/folders/1dvzTErE4v8QJ08HPfrgk6G1N0Z1g17AD" target="_blank" style="font-weight: 700; font-style: italic;">Designer Portfolio.</a></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
