--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@ innovation and excellence.
                   <li>Collaborated with cross-functional teams to gather requirements,
                     troubleshoot issues, and deliver high-quality software
                     solutions.</li>
-                    <li>Click for <a href="https://drive.google.com/drive/folders/1dvzTErE4v8QJ08HPfrgk6G1N0Z1g17AD" target="_blank" style="font-weight: 700; font-style: italic;">Designer Portfolio.</a></li>
-              </ul>
+                  </ul>
+                  <p>Click for <a href="https://drive.google.com/drive/folders/1dvzTErE4v8QJ08HPfrgk6G1N0Z1g17AD" target="_blank" style="font-weight: 700; font-style: italic;">Designer Portfolio.</a></p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -316,7 +316,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, Node.js, and Django. React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
+        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, PHP, and Mysql. React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
