--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="">
+      <img src="assets/img/hero-bg-1.jpg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -316,7 +316,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, PHP, and Mysql. React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
+        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, PHP, and Mysql, React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
