--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p> showcasing my experience, education, and technical background. With a strong foundation in web and mobile development, I’m constantly growing and adapting to new technologies to solve real-world problems. Feel free to download my resume or reach out for opportunities to collaborate.</p>
+        <p>Showcasing my experience, education, and technical background. With a strong foundation in web and mobile development, I’m constantly growing and adapting to new technologies to solve real-world problems. Feel free to download my resume or reach out for opportunities to collaborate.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
