--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ innovation and excellence.
           </div>
 
           <div class="col-lg-8">
-            <form action="mailto:oluwadamilare.c99@gmail.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formsubmit.co/oluwadamilare.c99@gmail.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
