--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ innovation and excellence.
               <div class="portfolio-info">
                 <h4>Success Box v2.0</h4>
                 <p>An Educational App for Students and Pupils</p>
-                <a href="assets/img/portfolio/sb1 (1).png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/sb1 (1).png" title="Success Box V2.0" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="https://play.google.com/store/apps/details?id=sbox.chronicles.v2&hl=en" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
