--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ innovation and excellence.
             <div class="resume-item pb-0">
               <h4>Godwin Eliaschukwudi</h4>
               <p><em>Dynamic and results-driven Senior Software Developer with over
-                four years of experience specializing in React, React Native, PHP,
+                four years of experience specializing in React, Vue, React Native, PHP,
                 and Laravel. Additionally, skilled as an SEO Specialist and Graphic
                 Designer, adept at optimizing digital presence and crafting
                 engaging visual experiences</em></p>
@@ -316,7 +316,7 @@ innovation and excellence.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, PHP, and Mysql, React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
+        <p>I build secure, scalable, and high-performance server-side applications and APIs using modern frameworks like Laravel, PHP, and Mysql, Vue, React, React Native, Tailwind CSS and Bootstrap for frontend development.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
